--- a/docs/references/javascript/user/create-metadata.mdx
+++ b/docs/references/javascript/user/create-metadata.mdx
@@ -48,15 +48,9 @@ await clerk.load();
 if (clerk.user) {
   const email = "test@test.com";
 
-  clerk.user
-    .createEmailAddress({ email })
-    .then((response) => {
-      console.log(response);
-      console.log("Email added to user successfully");
-    })
-    .catch((error) => {
-      console.log("An error occurred:", error.errors);
-    });
+  clerk.user.createEmailAddress({ email })
+    .then((response) => console.log(response))
+    .catch((error) => console.log("An error occurred:", error.errors));
 } else {
   document.getElementById("app").innerHTML = `
     <div id="sign-in"></div>
@@ -88,15 +82,9 @@ if (clerk.user) {
       if (Clerk.user) {
         const email = "test@test.com";
 
-        Clerk.user
-          .createEmailAddress({ email })
-          .then((response) => {
-            console.log(response);
-            console.log("Email added to user successfully");
-          })
-          .catch((error) => {
-            console.log("An error occurred:", error.errors);
-          });
+        Clerk.user.createEmailAddress({ email })
+          .then((response) => console.log(response))
+          .catch((error) => console.log("An error occurred:", error.errors));
       } else {
         document.getElementById("app").innerHTML = `
             <div id="sign-in"></div>
@@ -154,15 +142,9 @@ await clerk.load();
 if (clerk.user) {
   const phoneNumber = "15551234567";
 
-  clerk.user
-    .createPhoneNumber({ phoneNumber })
-    .then((response) => {
-      console.log(response);
-      console.log("Phone number added to user successfully");
-    })
-    .catch((error) => {
-      console.log("An error occurred:", error.errors);
-    });
+  clerk.user.createPhoneNumber({ phoneNumber })
+    .then((response) => console.log(response))
+    .catch((error) => console.log("An error occurred:", error.errors));
 } else {
   document.getElementById("app").innerHTML = `
     <div id="sign-in"></div>
@@ -194,15 +176,9 @@ if (clerk.user) {
       if (Clerk.user) {
         const phoneNumber = "15551234567";
 
-        Clerk.user
-          .createPhoneNumber({ phoneNumber })
-          .then((response) => {
-            console.log(response);
-            console.log("Phone number added to user successfully");
-          })
-          .catch((error) => {
-            console.log("An error occurred:", error.errors);
-          });
+        Clerk.user.createPhoneNumber({ phoneNumber })
+          .then((response) => console.log(response))
+          .catch((error) => console.log("An error occurred:", error.errors));
       } else {
         document.getElementById("app").innerHTML = `
             <div id="sign-in"></div>
@@ -260,15 +236,9 @@ await clerk.load();
 if (clerk.user) {
   const web3Wallet = "0x0123456789ABCDEF0123456789ABCDEF01234567";
 
-  clerk.user
-    .createWeb3Wallet({ web3Wallet })
-    .then((response) => {
-      console.log(response);
-      console.log("Web3 wallet added to user successfully");
-    })
-    .catch((error) => {
-      console.log("An error occurred:", error.errors);
-    });
+  clerk.user.createWeb3Wallet({ web3Wallet })
+    .then((response) => console.log(response))
+    .catch((error) => console.log("An error occurred:", error.errors));
 } else {
   document.getElementById("app").innerHTML = `
     <div id="sign-in"></div>
@@ -300,15 +270,9 @@ if (clerk.user) {
       if (Clerk.user) {
         const web3Wallet = "0x0123456789ABCDEF0123456789ABCDEF01234567";
 
-        Clerk.user
-          .createWeb3Wallet({ web3Wallet })
-          .then((response) => {
-            console.log(response);
-            console.log("Web3 wallet added to user successfully");
-          })
-          .catch((error) => {
-            console.log("An error occurred:", error.errors);
-          });
+        Clerk.user.createWeb3Wallet({ web3Wallet })
+          .then((response) => console.log(response))
+          .catch((error) => console.log("An error occurred:", error.errors));
       } else {
         document.getElementById("app").innerHTML = `
             <div id="sign-in"></div>
