sign-in-sign-up --> sign-up-sign-in for consistency (#821)

--- a/docs/authentication/configuration/sign-up-sign-in-options.mdx
+++ b/docs/authentication/configuration/sign-up-sign-in-options.mdx
@@ -5,7 +5,7 @@ description: Clerk provides various options for setting up a sign-up and sign-in
 
 # Sign-up and sign-in options
 
-Clerk provides various options for setting up a sign-in and sign-up flow. When a new application is created, you will be presented with the following application configuration screen:
+Clerk provides various options for setting up a sign-up and sign-in flow. When a new application is created, you will be presented with the following application configuration screen:
 
 <Images
 width={1879}
@@ -14,7 +14,7 @@ src="/docs/images/setup-clerk/create-sign-in-comp.png"
 alt="An interactive builder for customizing your <SignIn /> component, which includes choosing identifiers and social login options."
 />
 
-You can always make changes to your sign-in and sign-up options after your application has been created by visiting the [Clerk Dashboard](https://dashboard.clerk.com/) and selecting the **User & Authentication** dropdown in the navigation sidebar.
+You can always make changes to your sign-up and sign-in options after your application has been created by visiting the [Clerk Dashboard](https://dashboard.clerk.com/) and selecting the **User & Authentication** dropdown in the navigation sidebar.
 
 In addition to the application name set for your instance, there will be standard authentication options to choose from: [identifiers](#identifiers), [authentication strategies](#authentication-strategies), [verification methods](#verification-methods), [social login providers](##social-connections-o-auth), [Web3 authentication](#web3-authentication), [multi-factor authentication](#set-up-multi-factor-authentication), and [sign-up restrictions](#sign-up-restrictions). This guide will walk you through each of these options.
 
@@ -165,7 +165,7 @@ Ensure that *only* **Email address** is enabled as an identifier.
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) and select your application.
 2. In the navigation sidebar, select **User & Authentication > Email, Phone, Username**.
 3. Toggle on the **Email address** option. (Make sure the **Phone number** option and any social connections are toggled off.)
-4. Select **Apply changes** in the bottom right corner.
+4. Select **Save changes** in the top right corner.
 
 Users can now sign up and sign in with their email.
 
@@ -213,7 +213,7 @@ Ensure that *only* **Phone number** is enabled as an identifier.
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) and select your application.
 2. In the navigation sidebar, select **User & Authentication > Email, Phone, Username**.
 3. Toggle on the **Phone number** option. (Make sure the **Email address** option and any social connections are toggled off.)
-4. Select **Apply changes** in the bottom right corner.
+4. Select **Save changes** in the top right corner.
 
 Users can now sign up and sign in with their phone number.
 
@@ -257,7 +257,7 @@ Users won't need an email or password, so you can turn those off.
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) and select your application.
 2. In the navigation sidebar, select **User & Authentication > Email, Phone, Username**.
 3. Toggle *off* the **Email address** and **Phone number** options.
-4. Select **Apply changes** in the bottom right corner.
+4. Select **Save changes** in the top right corner.
 
 ### Enable social connections as authentication options
 
