link to org object

--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -46,7 +46,7 @@ function update(params: UpdateOrganizationParams): Promise<Organization>;
 
 | Type | Description |
 | --- | --- |
-| `Promise<Organization>` | This method returns a `Promise` which resolves to an `Organization` object. |
+| `Promise<Organization>` | This method returns a `Promise` which resolves to an [`Organization`](#organization) object. |
 
 #### `update()` example
 
@@ -224,7 +224,7 @@ function setLogo(params: SetOrganizationLogoParams): Promise<Organization>;
 
 | Type | Description |
 | --- | --- |
-| `Promise<Organization>` | This method returns a `Promise` which resolves to an `Organization` object. |
+| `Promise<Organization>` | This method returns a `Promise` which resolves to an [`Organization`](#organization) object. |
 
 #### `setLogo()` example
 
