--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -85,7 +85,7 @@ All props below are optional.
 
 | Type | Description |
 | --- | --- |
-| `Promise<User>` | This method returns a `Promise` which resolves with the current `User` object. |
+| `Promise<User>` | This method returns a `Promise` which resolves with the current [`User`](#user) object. |
 
 #### `update()` example
 
@@ -268,6 +268,114 @@ function setProfileImage: (params: SetProfileImageParams) => Promise<ImageResour
 | `id?` | `string` | The unique identifier of the image. |
 | `name` | `string \| null` | The name of the image. |
 | `publicUrl` | `string \| null` | The publically accessible url for the image. |
+
+#### `setProfileImage()` example
+
+<InjectKeys>
+
+<Tabs type="npm-script" items={['NPM module', '<script>']}>
+  <Tab>
+    For the following example, your HTML file should look like this:
+
+    ```html filename="index.html"
+    <!doctype html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Clerk + JavaScript App</title>
+      </head>
+      <body>
+        <div id="app"></div>
+
+        <input type="file" id="profile-image" />
+        <button id="upload-image">Upload profile image</button>
+
+        <script type="module" src="/main.js"></script>
+      </body>
+    </html>
+    ```
+
+    And your JavaScript file should look like this:
+
+    ```js filename="main.js"
+    import Clerk from '@clerk/clerk-js';
+
+    // Initialize Clerk with your Clerk publishable key
+    const clerk = new Clerk('{{pub_key}}');
+    await clerk.load();
+
+    if (clerk.user) {
+      // Get the current organization
+      const currentOrganization = clerk.organization;
+
+      // Update the user's profile image
+      document.getElementById("upload-image").addEventListener("click", () => {
+        const profileImage = document.getElementById("profile-image").files[0];
+        console.log(profileImage);
+
+        currentOrganization.setLogo({ file: profileImage })
+          .then((res) => console.log(res))
+          .catch((error) => console.log("An error occurred:", error.errors));
+      });
+    } else {
+      document.getElementById("app").innerHTML = `
+        <div id="sign-in"></div>
+      `;
+
+      const signInDiv = document.getElementById("sign-in");
+
+      clerk.mountSignIn(signInDiv);
+    }
+    ```
+  </Tab>
+
+  <Tab>
+  ```html filename="index.html"
+    <div id="app"></div>
+
+    <input type="file" id="profile-image" />
+    <button id="upload-image">Upload profile image</button>
+
+    <!-- Initialize Clerk with your
+    Clerk publishable key and Frontend API URL -->
+    <script
+      async
+      crossorigin="anonymous"
+      data-clerk-publishable-key='{{pub_key}}'
+      src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+      type="text/javascript"
+    ></script>
+
+    <script>
+      window.addEventListener("load", async function () {
+        await Clerk.load();
+        if (Clerk.user) {
+          // Get the current organization
+          const currentOrganization = Clerk.organization;
+
+          // Update the user's profile image
+          document.getElementById("upload-image").addEventListener("click", () => {
+            const profileImage = document.getElementById("profile-image").files[0];
+            currentOrganization.setLogo({ file: profileImage })
+              .then((res) => console.log(res))
+              .catch((error) => console.log("An error occurred:", error.errors));
+          });
+        } else {
+          document.getElementById("app").innerHTML = `
+            <div id="sign-in"></div>
+          `;
+          const signInDiv = document.getElementById("sign-in");
+          Clerk.mountSignIn(signInDiv);
+        }
+      });
+    </script>
+  ```
+  </Tab>
+</Tabs>
+
+</InjectKeys>
 
 ### `reload()`
 
