consolidate lines of code

--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -103,12 +103,8 @@ In the following example, the user's first name is updated to "Test".
 
   if (clerk.user) {
     await clerk.user.update({ firstName: "Test" })
-      .then((res) => {
-        console.log(res);
-      })
-      .catch((error) => {
-        console.log("An error occurred:", error.errors);
-      });
+      .then((res) => console.log(res))
+      .catch((error) => console.log("An error occurred:", error.errors));
   } else {
     document.getElementById("app").innerHTML = `
       <div id="sign-in"></div>
@@ -139,12 +135,8 @@ In the following example, the user's first name is updated to "Test".
 
       if (Clerk.user) {
         await Clerk.user.update({ firstName: "Test" })
-          .then((res) => {
-            console.log(res);
-          })
-          .catch((error) => {
-            console.log("An error occurred:", error.errors);
-          });
+          .then((res) => console.log(res))
+          .catch((error) => console.log("An error occurred:", error.errors));
       } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
@@ -183,12 +175,8 @@ function delete: () => Promise<void>;
 
   if (clerk.user) {
     await clerk.user.delete()
-      .then((res) => {
-        console.log(res);
-      })
-      .catch((error) => {
-        console.log("An error occurred:", error.errors);
-      });
+      .then((res) => console.log(res))
+      .catch((error) => console.log("An error occurred:", error.errors));
   } else {
     document.getElementById("app").innerHTML = `
       <div id="sign-in"></div>
@@ -219,12 +207,8 @@ function delete: () => Promise<void>;
 
       if (Clerk.user) {
         await Clerk.user.delete()
-          .then((res) => {
-            console.log(res);
-          })
-          .catch((error) => {
-            console.log("An error occurred:", error.errors);
-          });
+          .then((res) => console.log(res))
+          .catch((error) => console.log("An error occurred:", error.errors));
       } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
@@ -318,7 +302,7 @@ function setProfileImage: (params: SetProfileImageParams) => Promise<ImageResour
         currentOrganization.setLogo({ file: profileImage })
           .then((res) => console.log(res))
           .catch((error) => console.log("An error occurred:", error.errors));
-      });
+        });
     } else {
       document.getElementById("app").innerHTML = `
         <div id="sign-in"></div>
@@ -358,10 +342,11 @@ function setProfileImage: (params: SetProfileImageParams) => Promise<ImageResour
           // Update the user's profile image
           document.getElementById("upload-image").addEventListener("click", () => {
             const profileImage = document.getElementById("profile-image").files[0];
+
             currentOrganization.setLogo({ file: profileImage })
               .then((res) => console.log(res))
               .catch((error) => console.log("An error occurred:", error.errors));
-          });
+            });
         } else {
           document.getElementById("app").innerHTML = `
             <div id="sign-in"></div>
@@ -457,12 +442,8 @@ function getSessions: () => Promise<SessionWithActivities[]>;
 
   if (clerk.user) {
     await clerk.user.getSessions()
-      .then((res) => {
-        console.log(res);
-      })
-      .catch((error) => {
-        console.log("An error occurred:", error.errors);
-      });
+      .then((res) => console.log(res))
+      .catch((error) => console.log("An error occurred:", error.errors));
   } else {
     document.getElementById("app").innerHTML = `
       <div id="sign-in"></div>
@@ -493,12 +474,8 @@ function getSessions: () => Promise<SessionWithActivities[]>;
 
       if (Clerk.user) {
         await Clerk.user.getSessions()
-          .then((res) => {
-            console.log(res);
-          })
-          .catch((error) => {
-            console.log("An error occurred:", error.errors);
-          });
+          .then((res) => console.log(res))
+          .catch((error) => console.log("An error occurred:", error.errors));
       } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
@@ -565,12 +542,8 @@ function getOrganizationInvitations: (params?: GetUserOrganizationInvitationsPar
 
   if (clerk.user) {
     await clerk.user.getOrganizationInvitations()
-      .then((res) => {
-        console.log(res);
-      })
-      .catch((error) => {
-        console.log("An error occurred:", error.errors);
-      });
+      .then((res) => console.log(res))
+      .catch((error) => console.log("An error occurred:", error.errors));
   } else {
     document.getElementById("app").innerHTML = `
       <div id="sign-in"></div>
@@ -601,12 +574,8 @@ function getOrganizationInvitations: (params?: GetUserOrganizationInvitationsPar
 
       if (Clerk.user) {
         await Clerk.user.getOrganizationInvitations()
-          .then((res) => {
-            console.log(res);
-          })
-          .catch((error) => {
-            console.log("An error occurred:", error.errors);
-          });
+          .then((res) => console.log(res))
+          .catch((error) => console.log("An error occurred:", error.errors));
       } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
@@ -631,7 +600,7 @@ Retrieves a list of organization suggestions for the user.
 function getOrganizationSuggestions: (params?: GetUserOrganizationSuggestionsParams) => Promise<ClerkPaginatedResponse<OrganizationSuggestion>>;
 ```
 
-### `GetUserOrganizationInvitationsParams`
+### `GetUserOrganizationSuggestionsParams`
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -659,12 +628,8 @@ function getOrganizationSuggestions: (params?: GetUserOrganizationSuggestionsPar
 
   if (clerk.user) {
     await clerk.user.getOrganizationSuggestions()
-      .then((res) => {
-        console.log(res);
-      })
-      .catch((error) => {
-        console.log("An error occurred:", error.errors);
-      });
+      .then((res) => console.log(res))
+      .catch((error) => console.log("An error occurred:", error.errors));
   } else {
     document.getElementById("app").innerHTML = `
       <div id="sign-in"></div>
@@ -695,12 +660,8 @@ function getOrganizationSuggestions: (params?: GetUserOrganizationSuggestionsPar
 
       if (Clerk.user) {
         await Clerk.user.getOrganizationSuggestions()
-          .then((res) => {
-            console.log(res);
-          })
-          .catch((error) => {
-            console.log("An error occurred:", error.errors);
-          });
+          .then((res) => console.log(res))
+          .catch((error) => console.log("An error occurred:", error.errors));
       } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
@@ -752,12 +713,8 @@ function getOrganizationMemberships: (params?: GetUserOrganizationMembershipPara
 
   if (clerk.user) {
     await clerk.user.getOrganizationMemberships()
-      .then((res) => {
-        console.log(res);
-      })
-      .catch((error) => {
-        console.log("An error occurred:", error.errors);
-      });
+      .then((res) => console.log(res))
+      .catch((error) => console.log("An error occurred:", error.errors));
   } else {
     document.getElementById("app").innerHTML = `
       <div id="sign-in"></div>
@@ -788,13 +745,8 @@ function getOrganizationMemberships: (params?: GetUserOrganizationMembershipPara
 
       if (Clerk.user) {
         await Clerk.user.getOrganizationMemberships()
-          .then((res) => {
-            console.log(res);
-          })
-          .catch((error) => {
-            console.log("An error occurred:", error.errors);
-          });
-
+          .then((res) => console.log(res))
+          .catch((error) => console.log("An error occurred:", error.errors));
       } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
