move example to correct spot

--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -358,6 +358,33 @@ function getRoles: (params?: GetRolesParams) => Promise<ClerkPaginatedResponse<R
 | --- | --- |
 | `Promise<ClerkPaginatedResponse<RoleResource>>` | This method returns a `Promise` which resolves to a [`ClerkPaginatedResponse`](/docs/references/javascript/types/clerk-paginated-response) of [`RoleResource`](#role-resource) objects. |
 
+#### `RoleResource`
+
+An *experimental* interface that includes information about a user's role.
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `id` | `string` | The unique identifier of the role. |
+| `key` | `string` | The unique key of the role. |
+| `name` | `string` | The name of the role. |
+| `description` | `string` | The description of the role. |
+| `permissions` | <code>[PermissionResource](#permission-resource)[]</code> | The permissions of the role. |
+| `createdAt` | `string` | The date and time the role was created. |
+| `updatedAt` | `string` | The date and time the role was last updated. |
+
+#### `PermissionResource`
+
+An *experimental* interface that includes information about a user's permission.
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `id` | `string` | The unique identifier of the role. |
+| `key` | `string` | The unique key of the role. |
+| `name` | `string` | The name of the role. |
+| `type` | `'system' \| 'user'` | The type of the permission. |
+| `createdAt` | `string` | The date and time the role was created. |
+| `updatedAt` | `string` | The date and time the role was last updated. |
+
 #### `getRoles()` example
 
 <InjectKeys>
@@ -429,36 +456,9 @@ if (clerk.user) {
 
 </InjectKeys>
 
-#### `RoleResource`
-
-An *experimental* interface that includes information about a user's role.
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `id` | `string` | The unique identifier of the role. |
-| `key` | `string` | The unique key of the role. |
-| `name` | `string` | The name of the role. |
-| `description` | `string` | The description of the role. |
-| `permissions` | <code>[PermissionResource](#permission-resource)[]</code> | The permissions of the role. |
-| `createdAt` | `string` | The date and time the role was created. |
-| `updatedAt` | `string` | The date and time the role was last updated. |
-
-#### `PermissionResource`
-
-An *experimental* interface that includes information about a user's permission.
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `id` | `string` | The unique identifier of the role. |
-| `key` | `string` | The unique key of the role. |
-| `name` | `string` | The name of the role. |
-| `type` | `'system' \| 'user'` | The type of the permission. |
-| `createdAt` | `string` | The date and time the role was created. |
-| `updatedAt` | `string` | The date and time the role was last updated. |
-
 ## Additional methods
 
-In addition to the methods listed above, the `Organization` class also has the following methods:
+In addition to the methods listed above, the `Organization` object also has the following methods:
 
 ### Members
 
