--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -1,19 +1,19 @@
 ---
-title: Organization Members
-description: These are all methods on the Organization class that allow you to manage the members of an organization.
+title: Organization membership methods
+description: Learn about the methods on the Organization object that allow you to manage the members of an organization.
 ---
 
-# Organization Members
+# Organization membership methods
 
-These are all methods on the [Organization](/docs/references/javascript/organization/organization) class that allow you to manage the members of an organization.
+These methods on the [`Organization`](/docs/references/javascript/organization/organization) object allow you to manage the members of an organization.
 
 ## `getMemberships()`
 
-```typescript
-function getMemberships(params?: GetMembersParams): Promise<PaginatedResponse<OrganizationMembership>>;
-```
-
 Retrieve the members of the currently active organization.
+
+```typescript
+function getMemberships(params?: GetMembersParams): Promise<ClerkPaginatedResponse<OrganizationMembership>>;
+```
 
 ### `GetMembersParams`
 
@@ -21,18 +21,17 @@ Retrieve the members of the currently active organization.
 | --- | --- | --- |
 | `initialPage?` | `number` | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. |
 | `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
-| `role` | `string` | The [roles](/docs/organizations/roles-permissions) of memberships that will be included in the response. |
+| `role?` | <code>[`OrganizationCustomRoleKey`](#organization-custom-role-key)[]</code> | The [roles](/docs/organizations/roles-permissions) of memberships that will be included in the response. |
 
-<Callout type="danger">
-  `GetMembershipsParams` was updated to `GetMembersParams` in September, 2023. The `limit` and `offset` parameters are now deprecated.
-</Callout>
+#### `OrganizationCustomRoleKey`
 
+`OrganizationCustomRoleKey` is a string that represents the user's role in the organization. Clerk provides the [default roles](/docs/organizations/roles-permissions#default-roles) `org:admin` and `org:member`. However, you can create [custom roles](/docs/organizations/create-roles-permissions) as well.
 
-### Returns
+### `getMemberships()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[PaginatedResponse][pag-ref]\<[OrganizationMembership][org-mem-ref]\>></code> | This method returns a `Promise` which resolves with a [`PaginatedResponse`][pag-ref] of [`OrganizationMembership`][org-mem-ref] objects. |
+| `Promise<ClerkPaginatedResponse<OrganizationMembership>>` | This method returns a `Promise` that resolves to a [`ClerkPaginatedResponse`][pag-ref] of [`OrganizationMembership`][org-mem-ref] objects. |
 
 ## getMembershipRequests()
 
@@ -52,13 +51,13 @@ function getMembershipRequests: (params?: GetMembershipRequestParams) => Promise
 
 ## `addMember()`
 
+Adds a user as a member to an organization. A user can only be added to an organization if they are not already a member of it and if they already exist in the same instance as the organization.
+
+Only administrators can add members to an organization.
+
 ```typescript
 function addMember(params: AddMemberParams): Promise<OrganizationMembership>;
 ```
-
-Adds a user as a member to an organization. A user can only be added to an organization if they are not already members of it and if they already exist in the same instance as the organization.
-
-Please note that only administrators can add members to an organization.
 
 ### `AddMemberParams`
 
@@ -67,19 +66,19 @@ Please note that only administrators can add members to an organization.
 | `userId` | `string` | The ID of the user that will be added as a member to the organization. |
 | `role` | `string` | The [role](/docs/organizations/roles-permissions) that the user will have in the organization. |
 
-### Returns
+### `addMember()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | This method returns a `Promise` which resolves with the[`OrganizationMembership`][org-mem-ref] objects. |
+| `Promise<OrganizationMembership>` | This method returns a `Promise` that resolves to the [`OrganizationMembership`][org-mem-ref] object. |
 
 ## `updateMember()`
+
+Updates a member. Currently, only a user's role can be updated.
 
 ```typescript
 function updateMember(params: UpdateMembershipParams): Promise<OrganizationMembership>;
 ```
-
-Updates a member based on the `userId`. Currently, only a user's role can be updated.
 
 ### `UpdateMembershipParams`
 
@@ -88,19 +87,19 @@ Updates a member based on the `userId`. Currently, only a user's role can be upd
 | `userId` | `string` | The user identifier. |
 | `role` | `string` | The [role](/docs/organizations/roles-permissions) of the new member. |
 
-### Returns
+### `updateMember()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | This method returns a `Promise` which resolves with the updated [`OrganizationMembership`][org-mem-ref] objects. |
+| `Promise<OrganizationMembership>` | This method returns a `Promise` that resolves to the updated [`OrganizationMembership`][org-mem-ref] object. |
 
 ## `removeMember()`
+
+Removes a member from the organization based on the `userId`.
 
 ```typescript
 function removeMember(userId: string): Promise<OrganizationMembership>;
 ```
-
-Removes a member from the organization based on the `userId`.
 
 ### Properties
 
@@ -112,7 +111,7 @@ Removes a member from the organization based on the `userId`.
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | This method returns a `Promise` which resolves with the removed [`OrganizationMembership`][org-mem-ref] objects. |
+| `Promise<OrganizationMembership>` | This method returns a `Promise` that resolves to the removed [`OrganizationMembership`][org-mem-ref] object. |
 
 [pag-ref]: /docs/references/javascript/types/clerk-paginated-response
 [org-mem-ref]: /docs/references/javascript/organization-membership
