--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -33,6 +33,69 @@ function getMemberships(params?: GetMembersParams): Promise<ClerkPaginatedRespon
 | --- | --- |
 | `Promise<ClerkPaginatedResponse<OrganizationMembership>>` | This method returns a `Promise` that resolves to a [`ClerkPaginatedResponse`][pag-ref] of [`OrganizationMembership`][org-mem-ref] objects. |
 
+### `getMemberships()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+```js filename="main.js"
+import Clerk from '@clerk/clerk-js';
+
+// Initialize Clerk with your Clerk publishable key
+const clerk = new Clerk('{{pub_key}}');
+await clerk.load();
+
+if (clerk.user) {
+  await clerk.organization.getMemberships()
+    .then((res) => console.log(res))
+    .catch((error) => console.log("An error occurred:", error.errors));
+} else {
+  document.getElementById("app").innerHTML = `
+    <div id="sign-in"></div>
+  `;
+
+  const signInDiv = document.getElementById("sign-in");
+
+  clerk.mountSignIn(signInDiv);
+}
+```
+
+```html filename="index.html"
+  <div id="app"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+      if (Clerk.user) {
+        await Clerk.organization.getMemberships()
+          .then((res) => console.log(res))
+          .catch((error) => console.log("An error occurred:", error.errors));
+      } else {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
+
+        const signInDiv = document.getElementById("sign-in");
+
+        Clerk.mountSignIn(signInDiv);
+      }
+    });
+  </script>
+```
+</CodeBlockTabs>
+
+</InjectKeys>
+
 ## getMembershipRequests()
 
 Retrieve the membership requests of the currently active organization.
@@ -48,6 +111,75 @@ function getMembershipRequests: (params?: GetMembershipRequestParams) => Promise
 | `initialPage?` | `number` | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. |
 | `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
 | `status?` | `string` | The status of the membership requests that will be included in the response. |
+
+### `getMembershipRequests()` returns
+
+| Type | Description |
+| --- | --- |
+| `Promise<ClerkPaginatedResponse<OrganizationMembershipRequestResource>>` | This method returns a `Promise` that resolves to a [`ClerkPaginatedResponse`][pag-ref] of [`OrganizationMembershipRequest`](/docs/references/javascript/organization-membership-request) objects. |
+
+### `getMembershipRequests()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+```js filename="main.js"
+import Clerk from '@clerk/clerk-js';
+
+// Initialize Clerk with your Clerk publishable key
+const clerk = new Clerk('{{pub_key}}');
+await clerk.load();
+
+if (clerk.user) {
+  await clerk.organization.getMembershipRequests()
+    .then((res) => console.log(res))
+    .catch((error) => console.log("An error occurred:", error.errors));
+} else {
+  document.getElementById("app").innerHTML = `
+    <div id="sign-in"></div>
+  `;
+
+  const signInDiv = document.getElementById("sign-in");
+
+  clerk.mountSignIn(signInDiv);
+}
+```
+
+```html filename="index.html"
+  <div id="app"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+      if (Clerk.user) {
+        await Clerk.organization.getMembershipRequests()
+          .then((res) => console.log(res))
+          .catch((error) => console.log("An error occurred:", error.errors));
+      } else {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
+
+        const signInDiv = document.getElementById("sign-in");
+
+        Clerk.mountSignIn(signInDiv);
+      }
+    });
+  </script>
+```
+</CodeBlockTabs>
+
+</InjectKeys>
 
 ## `addMember()`
 
@@ -72,6 +204,75 @@ function addMember(params: AddMemberParams): Promise<OrganizationMembership>;
 | --- | --- |
 | `Promise<OrganizationMembership>` | This method returns a `Promise` that resolves to the [`OrganizationMembership`][org-mem-ref] object. |
 
+### `addMember()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+```js filename="main.js"
+import Clerk from '@clerk/clerk-js';
+
+// Initialize Clerk with your Clerk publishable key
+const clerk = new Clerk('{{pub_key}}');
+await clerk.load();
+
+if (clerk.user) {
+  const userId = "user_123";
+
+  await clerk.organization
+    .addMember({ userId, role: "org:member" })
+    .then((res) => console.log(res))
+    .catch((error) => console.log("An error occurred:", error.errors));
+} else {
+  document.getElementById("app").innerHTML = `
+    <div id="sign-in"></div>
+  `;
+
+  const signInDiv = document.getElementById("sign-in");
+
+  clerk.mountSignIn(signInDiv);
+}
+```
+
+```html filename="index.html"
+  <div id="app"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+      if (Clerk.user) {
+        const userId = "user_123";
+
+        await Clerk.organization
+          .addMember({ userId, role: "org:member" })
+          .then((res) => console.log(res))
+          .catch((error) => console.log("An error occurred:", error.errors));
+      } else {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
+
+        const signInDiv = document.getElementById("sign-in");
+
+        Clerk.mountSignIn(signInDiv);
+      }
+    });
+  </script>
+```
+</CodeBlockTabs>
+
+</InjectKeys>
+
 ## `updateMember()`
 
 Updates a member. Currently, only a user's role can be updated.
@@ -93,6 +294,75 @@ function updateMember(params: UpdateMembershipParams): Promise<OrganizationMembe
 | --- | --- |
 | `Promise<OrganizationMembership>` | This method returns a `Promise` that resolves to the updated [`OrganizationMembership`][org-mem-ref] object. |
 
+### `updateMember()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+```js filename="main.js"
+import Clerk from '@clerk/clerk-js';
+
+// Initialize Clerk with your Clerk publishable key
+const clerk = new Clerk('{{pub_key}}');
+await clerk.load();
+
+if (clerk.user) {
+  const userId = "user_123";
+
+  await clerk.organization
+    .updateMember({ userId, role: "org:member" })
+    .then((res) => console.log(res))
+    .catch((error) => console.log("An error occurred:", error.errors));
+} else {
+  document.getElementById("app").innerHTML = `
+    <div id="sign-in"></div>
+  `;
+
+  const signInDiv = document.getElementById("sign-in");
+
+  clerk.mountSignIn(signInDiv);
+}
+```
+
+```html filename="index.html"
+  <div id="app"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+      if (Clerk.user) {
+        const userId = "user_123";
+
+        await Clerk.organization
+          .updateMember({ userId, role: "org:member" })
+          .then((res) => console.log(res))
+          .catch((error) => console.log("An error occurred:", error.errors));
+      } else {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
+
+        const signInDiv = document.getElementById("sign-in");
+
+        Clerk.mountSignIn(signInDiv);
+      }
+    });
+  </script>
+```
+</CodeBlockTabs>
+
+</InjectKeys>
+
 ## `removeMember()`
 
 Removes a member from the organization based on the `userId`.
@@ -101,17 +371,86 @@ Removes a member from the organization based on the `userId`.
 function removeMember(userId: string): Promise<OrganizationMembership>;
 ```
 
-### Properties
+### `removeMember()` parameters
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `userId` | `string` | The user identifier. |
 
-### Returns
+### `removeMember()` returns
 
 | Type | Description |
 | --- | --- |
 | `Promise<OrganizationMembership>` | This method returns a `Promise` that resolves to the removed [`OrganizationMembership`][org-mem-ref] object. |
+
+### `removeMember()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+```js filename="main.js"
+import Clerk from '@clerk/clerk-js';
+
+// Initialize Clerk with your Clerk publishable key
+const clerk = new Clerk('{{pub_key}}');
+await clerk.load();
+
+if (clerk.user) {
+  const userId = "user_123";
+
+  await clerk.organization
+    .updateMember(userId)
+    .then((res) => console.log(res))
+    .catch((error) => console.log("An error occurred:", error.errors));
+} else {
+  document.getElementById("app").innerHTML = `
+    <div id="sign-in"></div>
+  `;
+
+  const signInDiv = document.getElementById("sign-in");
+
+  clerk.mountSignIn(signInDiv);
+}
+```
+
+```html filename="index.html"
+  <div id="app"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+      if (Clerk.user) {
+        const userId = "user_123";
+
+        await Clerk.organization
+          .removeMember(userId)
+          .then((res) => console.log(res))
+          .catch((error) => console.log("An error occurred:", error.errors));
+      } else {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
+
+        const signInDiv = document.getElementById("sign-in");
+
+        Clerk.mountSignIn(signInDiv);
+      }
+    });
+  </script>
+```
+</CodeBlockTabs>
+
+</InjectKeys>
 
 [pag-ref]: /docs/references/javascript/types/clerk-paginated-response
 [org-mem-ref]: /docs/references/javascript/organization-membership
