--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -5,11 +5,11 @@ description: Learn about the methods on the Organization object that allow you t
 
 # Organization membership methods
 
-These methods on the [`Organization`](/docs/references/javascript/organization/organization) object allow you to manage the members of an organization.
+These methods on the [`Organization`](/docs/references/javascript/organization/organization) object allow you to manage the memberships of an organization.
 
 ## `getMemberships()`
 
-Retrieve the members of the currently active organization.
+Retrieves the list of memberships for the currently active organization.
 
 ```typescript
 function getMemberships(params?: GetMembersParams): Promise<ClerkPaginatedResponse<OrganizationMembership>>;
@@ -98,7 +98,7 @@ if (clerk.user) {
 
 ## getMembershipRequests()
 
-Retrieve the membership requests of the currently active organization.
+Retrieve the list of membership requests for the currently active organization.
 
 ```typescript
 function getMembershipRequests: (params?: GetMembershipRequestParams) => Promise<ClerkPaginatedResponse<OrganizationMembershipRequestResource>>;
