--- a/docs/references/javascript/organization/domains.mdx
+++ b/docs/references/javascript/organization/domains.mdx
@@ -29,7 +29,7 @@ function createDomain: (domainName: string) => Promise<OrganizationDomainResourc
 
 | Type | Description |
 | --- | --- |
-| `Promise<OrganizationDomain>` | This method returns a `Promise` which resolves to the [`OrganizationDomain`][org-domain-ref] for the corresponding ID. |
+| `Promise<OrganizationDomain>` | This method returns a `Promise` that resolves to the [`OrganizationDomain`][org-domain-ref] for the corresponding ID. |
 
 ### `createDomain()` example
 
@@ -97,7 +97,7 @@ if (clerk.user) {
 Retrieves the list of domains for the currently active organization.
 
 ```typescript
-function getDomains(params?: GetDomainsParams): Promise<PaginatedResources<OrganizationDomain>>;
+function getDomains(params?: GetDomainsParams): Promise<ClerkPaginatedResponse<OrganizationDomain>>;
 ```
 
 ### `GetDomainsParams`
@@ -106,13 +106,13 @@ function getDomains(params?: GetDomainsParams): Promise<PaginatedResources<Organ
 | --- | --- | --- |
 | `initialPage?` | `number` | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. |
 | `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
-| `enrollmentMode?` | `'manual_invitation' \| 'automatic_invitation' \| 'automatic_suggestion'` | An [enrollment mode][enrollment-mode-ref] will change how new users join an organization. |
+| `enrollmentMode?` | `'manual_invitation' \| 'automatic_invitation' \| 'automatic_suggestion'` | An [enrollment mode](/docs/organizations/verified-domains#enrollment-modes) will change how new users join an organization. |
 
 ### `getDomains()` returns
 
 | Type | Description |
 | --- | --- |
-| `Promise<PaginatedResponse<OrganizationDomain>>` | This method returns a `Promise` that resolves with a list of [`OrganizationDomain`][org-domain-ref] objects. |
+| `Promise<ClerkPaginatedResponse<OrganizationDomain>>` | This method returns a `Promise` that resolves to a [`ClerkPaginatedResponse`](/docs/references/javascript/types/clerk-paginated-response) of [`OrganizationDomain`][org-domain-ref] objects. |
 
 ### `getDomains()` example
 
@@ -263,5 +263,3 @@ if (clerk.user) {
 </InjectKeys>
 
 [org-domain-ref]: /docs/references/javascript/organization-domain
-[pag-res-ref]: /docs/references/javascript/types/clerk-paginated-response
-[enrollment-mode-ref]: /docs/organizations/verified-domains#enrollment-modes
