--- a/docs/references/javascript/organization/invitations.mdx
+++ b/docs/references/javascript/organization/invitations.mdx
@@ -27,7 +27,7 @@ function getInvitations(params?: GetInvitationsParams): Promise<PaginatedResourc
 
 | Type | Description |
 | --- | --- |
-| `Promise<PaginatedResponse<OrganizationInvitation>>` | This method returns a `Promise` that resolves to a list of [`OrganizationInvitation`][orginv-ref] objects. |
+| `Promise<ClerkPaginatedResponse<OrganizationInvitation>>` | This method returns a `Promise` that resolves to a [`ClerkPaginatedResponse`](/docs/references/javascript/types/clerk-paginated-response) of [`OrganizationInvitation`][orginv-ref] objects. |
 
 ### `getInvitations()` example
 
@@ -228,7 +228,7 @@ function inviteMembers(params: InviteMembersParams): Promise<OrganizationInvitat
 
 | Type | Description |
 | --- | --- |
-| `Promise<OrganizationInvitation[]>` | This method returns a `Promise` that resolves to a list of [`OrganizationInvitation`][orginv-ref] objects for the created invitations. |
+| `Promise<OrganizationInvitation[]>` | This method returns a `Promise` that resolves to an array of [`OrganizationInvitation`][orginv-ref] objects for the created invitations. |
 
 ### `inviteMembers()` example
 
@@ -301,4 +301,3 @@ if (clerk.user) {
 </InjectKeys>
 
 [orginv-ref]: /docs/references/javascript/organization-invitation
-[pag-res-ref]: /docs/references/javascript/types/clerk-paginated-response
