--- a/docs/references/javascript/organization/membership-request.mdx
+++ b/docs/references/javascript/organization/membership-request.mdx
@@ -9,10 +9,10 @@ These are methods on the [Organization](/docs/references/javascript/organization
 
 ## `getMembershipRequests()`
 
-Retrieves a list of membership requests for the currently active organization.
+Retrieves the list of membership requests for the currently active organization.
 
 ```typescript
-function getMembershipRequests(params?: GetMembershipRequestParams): Promise<PaginatedResources<OrganizationMembershipRequest>>;
+function getMembershipRequests(params?: GetMembershipRequestParams): Promise<ClerkPaginatedResource<OrganizationMembershipRequest>>;
 ```
 
 ### `GetMembershipRequestParams`
@@ -27,7 +27,6 @@ function getMembershipRequests(params?: GetMembershipRequestParams): Promise<Pag
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[PaginatedResponse][pag-res-ref]\<[OrganizationMembershipRequest][mem-request-ref]\>></code> | This method returns a `Promise` which resolves with a list of `OrganizationMembershipRequest` objects. |
+| `Promise<ClerkPaginatedResponse<OrganizationMembershipRequest>>` | This method returns a `Promise` that resolves to a [`ClerkPaginatedResponse`](/docs/references/javascript/types/clerk-paginated-response) of [`OrganizationMembershipRequest`][mem-request-ref] objects. |
 
 [mem-request-ref]: /docs/references/javascript/organization-membership-request
-[pag-res-ref]: /docs/references/javascript/types/clerk-paginated-response
