--- a/docs/references/javascript/organization-invitation.mdx
+++ b/docs/references/javascript/organization-invitation.mdx
@@ -15,23 +15,238 @@ The `OrganizationInvitation` object is the model around an organization invitati
 | `emailAddress` | `string` | The email address the invitation has been sent. |
 | `organizationId` | `string` | The organization ID of the organization this invitation is for. |
 | `publicMetadata` | `object` | The public metadata of the organization membership. |
-| `role` | `string` | The [role](/docs/organizations/roles-permissions) of the current user in the organization. |
+| `role` | [`OrganizationCustomRoleKey`](#organization-custom-role-key) | The [role](/docs/organizations/roles-permissions) of the current user in the organization. |
 | `status` | `'pending' \| 'accepted' \| 'revoked'` | The status of the invitation. |
 | `createdAt` | `Date` | Date of the time the membership was created. |
 | `updatedAt` | `Date` | Date of the last time the membership was updated. |
+
+### `OrganizationCustomRoleKey`
+
+`OrganizationCustomRoleKey` is a string that represents the user's role in the organization. Clerk provides the [default roles](/docs/organizations/roles-permissions#default-roles) `org:admin` and `org:member`. However, you can create [custom roles](/docs/organizations/create-roles-permissions) as well.
 
 ## Methods
 
 ### `revoke()`
 
+Revokes the invitation for the email it corresponds to.
+
 ```typescript
 function revoke(): Promise<OrganizationInvitation>;
 ```
 
-Revokes the invitation for the email it corresponds to.
-
-### Returns
+### `revoke()` returns
 
 | Type | Description |
 | --- | --- |
-| `Promise<OrganizationInvitation>` | This method returns a `Promise` which resolves to the `OrganizationInvitation` for the revolked invitation. |
+| `Promise<OrganizationInvitation>` | This method returns a `Promise` which resolves to the [`OrganizationInvitation`](#organization-invitation) for the revolked invitation. |
+
+### `revoke()` example
+
+<InjectKeys>
+
+<Tabs type="npm-script" items={['NPM module', '<script>']}>
+  <Tab>
+    For the following example, your HTML file should look like this:
+
+    ```html filename="index.html"
+    <!doctype html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Clerk + JavaScript App</title>
+      </head>
+      <body>
+        <div id="app"></div>
+
+        <h2>Invitations List</h2>
+        <ul id="invitations_list"></ul>
+
+        <script type="module" src="/main.js"></script>
+      </body>
+    </html>
+    ```
+
+    And your JavaScript file should look like this:
+
+    ```js filename="main.js"
+    import Clerk from '@clerk/clerk-js';
+
+    // Initialize Clerk with your Clerk publishable key
+    const clerk = new Clerk('{{pub_key}}');
+    await clerk.load();
+
+    if (clerk.user) {
+      // Render list of organization invitations
+      async function renderInvitations(organization, isAdmin) {
+        const list = document.getElementById("invitations_list");
+        try {
+          const { totalCount, data } = await organization.getInvitations();
+
+          const invitations = data;
+
+          if (invitations.length === 0) {
+            list.textContent = "No invitations";
+          }
+
+          invitations.map((invitation) => {
+            const li = document.createElement("li");
+            li.textContent = `${invitation.emailAddress} - ${invitation.role}`;
+
+            // Add administrative actions: revoke invitation
+            if (isAdmin) {
+              const revokeBtn = document.createElement("button");
+              revokeBtn.textContent = "Revoke";
+              revokeBtn.addEventListener("click", async function (e) {
+                e.preventDefault();
+                await invitation.revoke();
+              });
+              li.appendChild(revokeBtn);
+            }
+            // Add the entry to the list
+            list.appendChild(li);
+          });
+        } catch (err) {
+          console.error(err);
+        }
+      }
+
+      // Gets the currently active org, checks if the current user
+      // is in the current org and if the user is an admin
+      // and then renders the invitations for the current org.
+      async function userAuthorizationBeforeRenderInvitations() {
+        // Get the currently active organization's ID.
+        const organizationId = clerk.organization.id;
+
+        // Check if the current user is in the currently active organization
+        const organizationMemberships =
+          await clerk.user.getOrganizationMemberships();
+
+        const currentMembership = organizationMemberships.find(
+          (membership) => membership.organization.id === organizationId
+        );
+        const currentOrganization = currentMembership.organization;
+
+        if (!currentOrganization) {
+          return;
+        }
+
+        // Check if the current user is an admin
+        const isAdmin = currentMembership.role === "org:admin";
+
+        renderInvitations(currentOrganization, isAdmin);
+      }
+
+      userAuthorizationBeforeRenderInvitations();
+    } else {
+      document.getElementById("app").innerHTML = `
+        <div id="sign-in"></div>
+      `;
+
+      const signInDiv = document.getElementById("sign-in");
+
+      clerk.mountSignIn(signInDiv);
+    }
+    ```
+  </Tab>
+
+  <Tab>
+    ```html filename="index.html"
+      <div id="app"></div>
+
+      <h2>Invitations List</h2>
+      <ul id="invitations_list"></ul>
+
+      <!-- Initialize Clerk with your
+      Clerk publishable key and Frontend API URL -->
+      <script
+        async
+        crossorigin="anonymous"
+        data-clerk-publishable-key='{{pub_key}}'
+        src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+        type="text/javascript"
+      ></script>
+
+      <script>
+        window.addEventListener("load", async function () {
+          await Clerk.load();
+
+          if (Clerk.user) {
+            // Render list of organization invitations
+            async function renderInvitations(organization, isAdmin) {
+              const list = document.getElementById("invitations_list");
+              try {
+                const { totalCount, data } = await organization.getInvitations();
+
+                const invitations = data;
+
+                if (invitations.length === 0) {
+                  list.textContent = "No invitations";
+                }
+
+                invitations.map((invitation) => {
+                  const li = document.createElement("li");
+                  li.textContent = `${invitation.emailAddress} - ${invitation.role}`;
+
+                  // Add administrative actions: revoke invitation
+                  if (isAdmin) {
+                    const revokeBtn = document.createElement("button");
+                    revokeBtn.textContent = "Revoke";
+                    revokeBtn.addEventListener("click", async function (e) {
+                      e.preventDefault();
+                      await invitation.revoke();
+                    });
+                    li.appendChild(revokeBtn);
+                  }
+                  // Add the entry to the list
+                  list.appendChild(li);
+                });
+              } catch (err) {
+                console.error(err);
+              }
+            }
+
+            // Gets the currently active org, checks if the current user
+            // is in the current org and if the user is an admin
+            // and then renders the invitations for the current org.
+            async function userAuthorizationBeforeRenderInvitations() {
+              // Get the currently active organization's ID.
+              const organizationId = Clerk.organization.id;
+
+              // Check if the current user is in the currently active organization
+              const organizationMemberships =
+                await Clerk.user.getOrganizationMemberships();
+
+              const currentMembership = organizationMemberships.find(
+                (membership) => membership.organization.id === organizationId
+              );
+              const currentOrganization = currentMembership.organization;
+
+              if (!currentOrganization) {
+                return;
+              }
+
+              // Check if the current user is an admin
+              const isAdmin = currentMembership.role === "org:admin";
+
+              renderInvitations(currentOrganization, isAdmin);
+            }
+
+            userAuthorizationBeforeRenderInvitations();
+          } else {
+            document.getElementById("app").innerHTML = `
+              <div id="sign-in"></div>
+            `;
+
+            const signInDiv = document.getElementById("sign-in");
+
+            Clerk.mountSignIn(signInDiv);
+          }
+        });
+      </script>
+    ```
+  </Tab>
+</Tabs>
+
+</InjectKeys>
