apply code review suggestions

--- a/docs/references/javascript/user/create-metadata.mdx
+++ b/docs/references/javascript/user/create-metadata.mdx
@@ -29,7 +29,7 @@ function createEmailAddress: (params: CreateEmailAddressParams) => Promise<Email
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[EmailAddress][email-ref]\></code> | This method returns a `Promise` which resolves to the the email address created for the user. |
+| <code>Promise\<[EmailAddress][email-ref]\></code> | This method returns a `Promise` which resolves to the email address created for the user. |
 
 ### `createEmailAddress()` example
 
@@ -306,7 +306,7 @@ function createExternalAccount: (params: CreateExternalAccountParams) => Promise
 | Name | Type | Description |
 | --- | --- | --- |
 | `strategy` | [`OAuthStrategy`](/docs/references/javascript/types/oauth#o-auth-strategy) | The strategy corresponding to the OAuth provider. For example: `oauth_facebook`, `oauth_github`, etc. |
-| `redirectUrl?` | `string` | The URL to redirect back to one the OAuth flow has completed successfully or unsuccessfully. |
+| `redirectUrl?` | `string` |  The URL to redirect back to once the OAuth flow has succeeded or failed. |
 | `additionalScopes?` | `string[]` | Any additional scopes you would like your user to be prompted to approve. |
 
 ### `createExternalAccount()` returns
@@ -321,10 +321,10 @@ After calling `createExternalAccount`, the initial `state` of the returned `Exte
 
 Upon return, inspect within the `user.externalAccounts` the entry that corresponds to the requested strategy:
 
-- If the connection was successful, then `externalAccount.verification.status` should be `verified`.
-- If the connection was not successful, then the `externalAccount.verification.status` should not be `verified` and the `externalAccount.verification.error` will contain the error encountered so that you can present corresponding feedback to the user.
+- If the connection succeeded, then `externalAccount.verification.status` will be `verified`.
+- If the connection failed, then the `externalAccount.verification.status` will be `failed` and the `externalAccount.verification.error` will contain the error encountered, which you can present to the user.
 
-The following example demonstrates how to add a Notion account as an external account for the user. When the user clicks the "Add Notion as a social connection" button, the user will be redirected to Notion to connect their account. After connecting their account, they will be redirected back to the `/` route of your application and the status of the connection will be displayed.
+The following example demonstrates how to add a Notion account as an external account for the user. When the user selects the "Add Notion as a social connection" button, the user will be redirected to Notion to connect their account. After connecting their account, they will be redirected to the `/` route of your application, and the status of the connection will be displayed.
 
 <InjectKeys>
 
