Initial structure of the Google setup without specific steps and using placeholder images

--- a/docs/authentication/saml/google.mdx
+++ b/docs/authentication/saml/google.mdx
@@ -35,7 +35,7 @@ Integrating Google SAML with Clerk process involves setting up a SAML applicatio
 
 ### Setup Clerk SAML Connection
 1. Create a new Enterprise Connection in the Clerk Dashboard. 
-2. Fill out the form with the details for your Okta Application.
+2. Fill out the form with the details for your Google Application.
 
 <Images 
   width={3024}
@@ -44,18 +44,7 @@ Integrating Google SAML with Clerk process involves setting up a SAML applicatio
   alt="Create a new Enterprise Connection in the Clerk Dashboard"
 />
 
-### Find the Okta Enterprise Applications 
-
-
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/.avif"
-  alt=""
-/>
-
-###  Create a new Okta Enterprise Application
-
+### Find the Google Enterprise Applications 
 
 <Images 
   width={3024}
@@ -64,7 +53,7 @@ Integrating Google SAML with Clerk process involves setting up a SAML applicatio
   alt=""
 />
 
-### Find Okta Browser Plugin
+###  Create a new Google Enterprise Application
 
 <Images 
   width={3024}
@@ -73,7 +62,8 @@ Integrating Google SAML with Clerk process involves setting up a SAML applicatio
   alt=""
 />
 
-#### Give the Application a Name
+
+#### Follow the Google SAML Setup Wizard
 
 <Images 
 width={3024} 
@@ -81,7 +71,20 @@ height={1652}
 src="/docs/images/authentication/saml/.avif" 
 />
 
-### SAML Configuration
+
+<Images 
+width={3024} 
+height={1652} 
+src="/docs/images/authentication/saml/.avif" 
+/>
+
+<Images 
+width={3024} 
+height={1652} 
+src="/docs/images/authentication/saml/.avif" 
+/>
+
+SAML Configuration in Google 
 
 <Images
   width={3024}
@@ -99,28 +102,17 @@ src="/docs/images/authentication/saml/.avif"
   alt=""
 />
 
-### Attribute Mapping in Okta to Clerk 
+### Attribute Mapping in Google to Clerk 
 
-You will want to add the following fields to the attribute mapping in Okta then proceed by clicking on "Next" to continue.
+You will want to add the following fields to the attribute mapping in Google to Clerk.
 <Images 
 width={3024} 
 height={1652} 
 src="/docs/images/authentication/saml/.avif"
-alt="Attribute Mapping in Okta to Clerk" 
+alt="Attribute Mapping in Google to Clerk" 
 />
 
-Select "software vendor" as the application type and click "Finish" to complete the setup.
 
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/.avif"
-  alt="Select 'software vendor' as the application type and click 'Finish' to complete the setup."
-/>
-
-### Assign Users to the Application
-1. Navigate to the "Assignments" tab 
-2. Click on "Assign" and "Assign to People" or "Assign to Groups"
 
 <Images 
   width={3024}
@@ -129,19 +121,10 @@ Select "software vendor" as the application type and click "Finish" to complete 
   alt=""
 />
 
-#### Find the User or Group to Assign 
+### Google PEM Certificate Download & Upload to Clerk
 
-Once you have found the user or group you want to assign, click "Assign" to complete the process.
-<Images
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/.avif"
-  alt=""
-/>
+Download the PEM certificate from Google.
 
-### Okta Metadata URL 
-
-Copy the Okta Metadata URL from Okta
 <Images 
   width={3024}
   height={1652}
@@ -149,7 +132,7 @@ Copy the Okta Metadata URL from Okta
   alt=""
 />
 
-Paste the Okta Metadata URL into the Clerk Dashboard and save changes to complete the setup.
+Upload the PEM certificate to Clerk.
 
 <Images 
   width={3024}
@@ -161,7 +144,7 @@ Paste the Okta Metadata URL into the Clerk Dashboard and save changes to complet
 
 ### Enable the Connection in Clerk Dashboard
 
-Once you have pasted the Okta Metadata URL into the Clerk Dashboard, you will need to enable the connection to complete the setup.
+Once you have pasted the Google Metadata URL into the Clerk Dashboard, you will need to enable the connection to complete the setup.
 <Images 
   width={3024}
   height={1652}
